messenger/include/dna/dna_engine.h

/* ============================================================================
 * OPAQUE TYPES
 * ============================================================================ */

typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
/* ============================================================================
 * PUBLIC DATA TYPES
 * ============================================================================ */

/**
 * Contact information
 */
typedef struct {
    char fingerprint[129];      /* 128 hex chars + null */
    char display_name[256];     /* Resolved name (nickname > DHT name > fingerprint) */
    char nickname[64];          /* Local nickname override (empty if not set) */
    bool is_online;             /* Current online status */
    uint64_t last_seen;         /* Unix timestamp of last activity */
} dna_contact_t;
/**
 * Contact request information (ICQ-style request)
 */
typedef struct {
    char fingerprint[129];      /* Requester's fingerprint (128 hex + null) */
    char display_name[64];      /* Requester's display name */
    char message[256];          /* Optional request message */
    uint64_t requested_at;      /* Unix timestamp when request was sent */
    int status;                 /* 0=pending, 1=approved, 2=denied */
} dna_contact_request_t;
/**
 * Blocked user information
 */
typedef struct {
    char fingerprint[129];      /* Blocked user's fingerprint */
    uint64_t blocked_at;        /* Unix timestamp when blocked */
    char reason[256];           /* Optional reason for blocking */
} dna_blocked_user_t;
/**
 * Message information
 */
typedef struct {
    int id;                     /* Local message ID */
    char sender[129];           /* Sender fingerprint */
    char recipient[129];        /* Recipient fingerprint */
    char *plaintext;            /* Decrypted message text (caller must free via dna_free_messages) */
    uint64_t timestamp;         /* Unix timestamp */
    bool is_outgoing;           /* true if sent by current identity */
    int status;                 /* 0=pending, 1=sent, 2=received, 3=failed */
    int message_type;           /* 0=chat, 1=group_invitation, 2=cpunkTransfer, 3=reaction */
    bool deleted_by_sender;     /* true if sender deleted this message (v17) */
    char content_hash[65];      /* SHA3-256 hex (64 chars + null), empty if unavailable (v0.9.194) */
} dna_message_t;
/**
 * Reaction entry (one reactor applying one emoji to one target message)
 */
typedef struct {
    char reactor_fp[129];       /* Reactor fingerprint (128 hex + null) */
    char emoji[8];              /* UTF-8 emoji, max 4 bytes + null */
    uint64_t timestamp;         /* Unix timestamp when reaction was applied */
} dna_reaction_t;
/**
 * Group information
 */
typedef struct {
    char uuid[37];              /* UUID v4 string */
    char name[256];             /* Group name */
    char creator[129];          /* Creator fingerprint */
    int member_count;           /* Number of members */
    uint64_t created_at;        /* Unix timestamp */
} dna_group_t;
/**
 * Group member information
 */
typedef struct {
    char fingerprint[129];      /* Member fingerprint */
    uint64_t added_at;          /* When member was added (Unix timestamp) */
    bool is_owner;              /* True if this member is the group owner */
} dna_group_member_t;
/**
 * Extended group information (includes GEK version)
 */
typedef struct {
    char uuid[37];              /* UUID v4 string */
    char name[256];             /* Group name */
    char creator[129];          /* Creator fingerprint */
    int member_count;           /* Number of members */
    uint64_t created_at;        /* Unix timestamp */
    bool is_owner;              /* True if we are the owner */
    uint32_t gek_version;       /* Current GEK version */
} dna_group_info_t;
/**
 * Group invitation
 */
typedef struct {
    char group_uuid[37];        /* Group UUID */
    char group_name[256];       /* Group name */
    char inviter[129];          /* Inviter fingerprint */
    int member_count;           /* Current member count */
    uint64_t invited_at;        /* Unix timestamp */
} dna_invitation_t;
/**
 * Wallet information (Cellframe)
 */
typedef struct {
    char name[256];             /* Wallet name */
    char address[120];          /* Primary address */
    int sig_type;               /* 0=Dilithium, 1=Picnic, 2=Bliss, 3=Tesla */
    bool is_protected;          /* Password protected */
} dna_wallet_t;
/**
 * Token balance
 */
typedef struct {
    char token[32];             /* Token ticker (CPUNK, CELL, KEL) */
    char balance[64];           /* Formatted balance string */
    char network[64];           /* Network name (Backbone, KelVPN) */
} dna_balance_t;
/**
 * Transaction record
 */
typedef struct {
    char tx_hash[128];          /* Transaction hash */
    char direction[16];         /* "sent" or "received" */
    char amount[64];            /* Formatted amount */
    char token[32];             /* Token ticker */
    char other_address[120];    /* Other party's address */
    char timestamp[32];         /* Formatted timestamp */
    char status[32];            /* ACCEPTED, DECLINED, PENDING */
} dna_transaction_t;
/**
 * Address book entry (wallet address storage)
 */
typedef struct {
    int id;                     /* Database row ID */
    char address[128];          /* Wallet address */
    char label[64];             /* User-defined label */
    char network[32];           /* Network: backbone, ethereum, solana, tron */
    char notes[256];            /* Optional notes */
    uint64_t created_at;        /* When address was added */
    uint64_t updated_at;        /* When address was last modified */
    uint64_t last_used;         /* When address was last used for sending */
    uint32_t use_count;         /* Number of times used for sending */
} dna_addressbook_entry_t;
/* =====================================================
 * Channel System (RSS-like channels)
 * ===================================================== */

/**
 * Channel information (simplified for async API)
 */
typedef struct {
    char channel_uuid[37];          /* UUID v4 */
    char name[101];                 /* Channel name (max 100 chars) */
    char *description;              /* Optional description (caller frees, max 500 chars) */
    char creator_fingerprint[129];  /* Creator's SHA3-512 fingerprint */
    uint64_t created_at;            /* Unix timestamp */
    bool is_public;                 /* Listed on public DHT index */
    bool deleted;                   /* Soft delete flag */
    uint64_t deleted_at;            /* When deleted (0 if not deleted) */
    bool verified;                  /* Dilithium5 signature verified */
} dna_channel_info_t;
/**
 * Channel post (flat text entry in a channel)
 */
typedef struct {
    char post_uuid[37];             /* UUID v4 */
    char channel_uuid[37];          /* Parent channel UUID */
    char author_fingerprint[129];   /* Author's SHA3-512 fingerprint */
    char *body;                     /* Post text content (caller frees, max 4000 chars) */
    uint64_t created_at;            /* Unix timestamp */
    bool verified;                  /* Dilithium5 signature verified */
} dna_channel_post_info_t;
/**
 * Channel subscription (local + DHT sync)
 */
typedef struct {
    char channel_uuid[37];          /* UUID v4 of subscribed channel */
    uint64_t subscribed_at;         /* Unix timestamp when subscribed */
    uint64_t last_synced;           /* Unix timestamp of last DHT sync */
    uint64_t last_read_at;          /* For unread tracking */
} dna_channel_subscription_info_t;
/**
 * User profile information (wallet addresses, socials, bio, avatar)
 * Synced with DHT dna_unified_identity_t structure
 */
typedef struct {
    /* Cellframe wallet addresses */
    char backbone[120];
    char alvin[120];            /* Alvin (cpunk mainnet) */

    /* External wallet addresses */
    char eth[128];              /* Ethereum address */
    char sol[128];
    char trx[128];              /* TRON address (T...) */
    char bsc[128];              /* BSC address (EVM-compatible) */

    /* Social links */
    char telegram[128];
    char twitter[128];          /* X (Twitter) handle */
    char github[128];
    char facebook[128];
    char instagram[128];
    char linkedin[128];
    char google[128];

    /* Profile info */
    char bio[512];
    char location[128];
    char website[256];
    char avatar_base64[20484];  /* Base64-encoded 64x64 PNG/JPEG (~20KB max) */
} dna_profile_t;
/**
 * Gas estimate result
 */
typedef struct {
    char fee_eth[32];       /* Fee in ETH (e.g., "0.000042") */
    uint64_t gas_price;     /* Gas price in wei */
    uint64_t gas_limit;     /* Gas limit (21000 for ETH transfer) */
} dna_gas_estimate_t;
/**
 * Gas estimates for all speeds (single RPC call)
 */
typedef struct {
    dna_gas_estimate_t slow;    /* 0.8x base gas price */
    dna_gas_estimate_t normal;  /* 1.0x base gas price */
    dna_gas_estimate_t fast;    /* 1.5x base gas price */
} dna_gas_estimates_t;
/* ============================================================================
 * 6b. DEX (Decentralized Exchange)
 * ============================================================================ */

/**
 * DEX quote result
 */
typedef struct {
    char from_token[16];        /* Input token symbol */
    char to_token[16];          /* Output token symbol */
    char amount_in[64];         /* Input amount (decimal string) */
    char amount_out[64];        /* Output amount (decimal string) */
    char price[64];             /* Spot price (1 from = X to) */
    char price_impact[16];      /* Price impact percentage */
    char fee[64];               /* Fee in input token */
    char pool_address[48];      /* Pool address used */
    char dex_name[32];          /* DEX name (e.g. "Raydium AMM v4", "Uniswap v2") */
    char chain[8];              /* Chain identifier ("SOL", "ETH", "CELL") */
    char warning[128];          /* Warning message (empty if none) */
} dna_dex_quote_t;
/**
 * DEX swap result
 */
typedef struct {
    char tx_signature[128];     /* Transaction signature (base58) */
    char amount_in[64];         /* Input amount (decimal string) */
    char amount_out[64];        /* Expected output amount (decimal string) */
    char from_token[16];        /* Input token symbol */
    char to_token[16];          /* Output token symbol */
    char dex_name[32];          /* DEX name from route */
    char price_impact[16];      /* Price impact percentage */
} dna_dex_swap_result_t;
/* ============================================================================
 * DEBUG LOG API - In-app log viewing for mobile debugging
 * ============================================================================ */

/**
 * Debug log entry structure (matches qgp_log_entry_t)
 */
typedef struct {
    uint64_t timestamp_ms;      /* Unix timestamp in milliseconds */
    int level;                  /* 0=DEBUG, 1=INFO, 2=WARN, 3=ERROR */
    char tag[32];               /* Module/tag name */
    char message[256];          /* Log message */
} dna_debug_log_entry_t;
/**
 * Backup info structure for check_backup_exists
 * NOTE: Explicit padding for cross-platform FFI compatibility (32-bit vs 64-bit)
 */
typedef struct {
    bool exists;              /* True if backup found in DHT */
    uint8_t _padding[7];      /* Explicit padding for 8-byte alignment */
    uint64_t timestamp;       /* Backup timestamp (Unix epoch) */
    int32_t message_count;    /* Number of messages (-1 if unknown) */
} dna_backup_info_t;