messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart

// DNA Connect Engine FFI Bindings
// Hand-written bindings for dna_engine.h
// ignore_for_file: non_constant_identifier_names, camel_case_types, constant_identifier_names, unused_field

import 'dart:convert';
import 'dart:ffi';
import 'package:ffi/ffi.dart';

// =============================================================================
// OPAQUE TYPES
// =============================================================================

/// Opaque engine handle
final class dna_engine extends Opaque {}

typedef dna_engine_t = dna_engine;
typedef dna_request_id_t = Uint64;

// =============================================================================
// DATA STRUCTURES
// =============================================================================

/// Contact information
final class dna_contact_t extends Struct {
  @Array(129)
  external Array<Char> fingerprint;

  @Array(256)
  external Array<Char> display_name;

  @Array(64)
  external Array<Char> nickname;

  @Bool()
  external bool is_online;

  // 6 bytes padding to align uint64_t to 8-byte boundary (450 -> 456)
  @Array(6)
  external Array<Uint8> _padding1;

  @Uint64()
  external int last_seen;
}

/// Contact request information (ICQ-style request)
final class dna_contact_request_t extends Struct {
  @Array(129)
  external Array<Char> fingerprint;

  @Array(64)
  external Array<Char> display_name;

  @Array(256)
  external Array<Char> message;

  // 7 bytes padding to align uint64_t to 8-byte boundary (449 -> 456)
  @Array(7)
  external Array<Uint8> _padding1;

  @Uint64()
  external int requested_at;

  @Int32()
  external int status; // 0=pending, 1=approved, 2=denied
}

/// Blocked user information
final class dna_blocked_user_t extends Struct {
  @Array(129)
  external Array<Char> fingerprint;

  // 7 bytes padding to align uint64_t to 8-byte boundary (129 -> 136)
  @Array(7)
  external Array<Uint8> _padding1;

  @Uint64()
  external int blocked_at;

  @Array(256)
  external Array<Char> reason;
}

/// Message information
final class dna_message_t extends Struct {
  @Int32()
  external int id;

  @Array(129)
  external Array<Char> sender;

  @Array(129)
  external Array<Char> recipient;

  // 2 bytes padding to align pointer to 8-byte boundary (262 -> 264)
  @Array(2)
  external Array<Uint8> _padding1;

  external Pointer<Utf8> plaintext;

  @Uint64()
  external int timestamp;

  @Bool()
  external bool is_outgoing;

  // 3 bytes padding to align int to 4-byte boundary (281 -> 284)
  @Array(3)
  external Array<Uint8> _padding2;

  @Int32()
  external int status;

  @Int32()
  external int message_type;

  @Bool()
  external bool deleted_by_sender;

  // v0.9.194: content_hash (SHA3-256 hex, 64 chars + null = 65 bytes)
  // Offset 293, ends at 358.
  @Array(65)
  external Array<Char> content_hash;

  // Padding to align struct to 8-byte boundary (plaintext pointer alignment).
  // Struct total size 360; after content_hash we're at 358, need 2 bytes pad.
  @Array(2)
  external Array<Uint8> _padding3;
}

/// Reaction entry (one reactor applying one emoji to one target message)
final class dna_reaction_t extends Struct {
  @Array(129)
  external Array<Char> reactor_fp;

  @Array(8)
  external Array<Char> emoji;

  // 7 bytes padding to align uint64 to 8-byte boundary (137 -> 144)
  @Array(7)
  external Array<Uint8> _padding1;

  @Uint64()
  external int timestamp;
}

/// Group information
final class dna_group_t extends Struct {
  @Array(37)
  external Array<Char> uuid;

  @Array(256)
  external Array<Char> name;

  @Array(129)
  external Array<Char> creator;

  // 2 bytes padding to align int to 4-byte boundary (422 -> 424)
  @Array(2)
  external Array<Uint8> _padding1;

  @Int32()
  external int member_count;

  // 4 bytes padding to align uint64_t to 8-byte boundary (428 -> 432)
  @Array(4)
  external Array<Uint8> _padding2;

  @Uint64()
  external int created_at;
}

/// Group member information
final class dna_group_member_t extends Struct {
  @Array(129)
  external Array<Char> fingerprint;

  // 7 bytes padding to align uint64_t to 8-byte boundary (129 -> 136)
  @Array(7)
  external Array<Uint8> _padding1;

  @Uint64()
  external int added_at;

  @Bool()
  external bool is_owner;
}

/// Extended group information (includes GEK version)
final class dna_group_info_t extends Struct {
  @Array(37)
  external Array<Char> uuid;

  @Array(256)
  external Array<Char> name;

  @Array(129)
  external Array<Char> creator;

  // 2 bytes padding (422 -> 424)
  @Array(2)
  external Array<Uint8> _padding1;

  @Int32()
  external int member_count;

  // 4 bytes padding to align uint64_t (428 -> 432)
  @Array(4)
  external Array<Uint8> _padding2;

  @Uint64()
  external int created_at;

  @Bool()
  external bool is_owner;

  // 3 bytes padding to align uint32_t (441 -> 444)
  @Array(3)
  external Array<Uint8> _padding3;

  @Uint32()
  external int gek_version;
}

/// Group invitation
final class dna_invitation_t extends Struct {
  @Array(37)
  external Array<Char> group_uuid;

  @Array(256)
  external Array<Char> group_name;

  @Array(129)
  external Array<Char> inviter;

  // 2 bytes padding to align int to 4-byte boundary (422 -> 424)
  @Array(2)
  external Array<Uint8> _padding1;

  @Int32()
  external int member_count;

  // 4 bytes padding to align uint64_t to 8-byte boundary (428 -> 432)
  @Array(4)
  external Array<Uint8> _padding2;

  @Uint64()
  external int invited_at;
}

/// Wallet information
final class dna_wallet_t extends Struct {
  @Array(256)
  external Array<Char> name;

  @Array(120)
  external Array<Char> address;

  @Int32()
  external int sig_type;

  @Bool()
  external bool is_protected;
}

/// Token balance
final class dna_balance_t extends Struct {
  @Array(32)
  external Array<Char> token;

  @Array(64)
  external Array<Char> balance;

  @Array(64)
  external Array<Char> network;
}

/// Gas estimate for ETH transactions
final class dna_gas_estimate_t extends Struct {
  @Array(32)
  external Array<Char> fee_eth;

  @Uint64()
  external int gas_price;

  @Uint64()
  external int gas_limit;
}

/// Gas estimates for all 3 speeds (single RPC call)
final class dna_gas_estimates_t extends Struct {
  external dna_gas_estimate_t slow;
  external dna_gas_estimate_t normal;
  external dna_gas_estimate_t fast;
}

/// DEX quote result
final class dna_dex_quote_t extends Struct {
  @Array(16)
  external Array<Char> from_token;

  @Array(16)
  external Array<Char> to_token;

  @Array(64)
  external Array<Char> amount_in;

  @Array(64)
  external Array<Char> amount_out;

  @Array(64)
  external Array<Char> price;

  @Array(16)
  external Array<Char> price_impact;

  @Array(64)
  external Array<Char> fee;

  @Array(48)
  external Array<Char> pool_address;

  @Array(32)
  external Array<Char> dex_name;

  @Array(8)
  external Array<Char> chain;

  @Array(128)
  external Array<Char> warning;
}

/// DEX swap result
final class dna_dex_swap_result_t extends Struct {
  @Array(128)
  external Array<Char> tx_signature;

  @Array(64)
  external Array<Char> amount_in;

  @Array(64)
  external Array<Char> amount_out;

  @Array(16)
  external Array<Char> from_token;

  @Array(16)
  external Array<Char> to_token;

  @Array(32)
  external Array<Char> dex_name;

  @Array(16)
  external Array<Char> price_impact;
}

/// Transaction record
final class dna_transaction_t extends Struct {
  @Array(128)
  external Array<Char> tx_hash;

  @Array(16)
  external Array<Char> direction;

  @Array(64)
  external Array<Char> amount;

  @Array(32)
  external Array<Char> token;

  @Array(120)
  external Array<Char> other_address;

  @Array(32)
  external Array<Char> timestamp;

  @Array(32)
  external Array<Char> status;
}

/// Address book entry (wallet addresses)
final class dna_addressbook_entry_t extends Struct {
  @Int32()
  external int id;

  @Array(128)
  external Array<Char> address;

  @Array(64)
  external Array<Char> label;

  @Array(32)
  external Array<Char> network;

  @Array(256)
  external Array<Char> notes;

  // 4 bytes padding to align uint64_t to 8-byte boundary (484 -> 488)
  @Array(4)
  external Array<Uint8> _padding1;

  @Uint64()
  external int created_at;

  @Uint64()
  external int updated_at;

  @Uint64()
  external int last_used;

  @Uint32()
  external int use_count;
}

/// Debug log entry (for in-app log viewing)
final class dna_debug_log_entry_t extends Struct {
  @Uint64()
  external int timestamp_ms;

  @Int32()
  external int level; // 0=DEBUG, 1=INFO, 2=WARN, 3=ERROR

  @Array(32)
  external Array<Char> tag;

  @Array(256)
  external Array<Char> message;
}

/// Backup info structure for check_backup_exists (v0.4.60)
final class dna_backup_info_t extends Struct {
  @Bool()
  external bool exists;

  // 7 bytes padding to align uint64_t to 8-byte boundary (C struct alignment)
  @Array(7)
  external Array<Uint8> _padding1;

  @Uint64()
  external int timestamp;

  @Int32()
  external int message_count;
}

/// User profile information (synced with DHT dna_unified_identity_t)
final class dna_profile_t extends Struct {
  // Cellframe wallets
  @Array(120)
  external Array<Char> backbone;

  @Array(120)
  external Array<Char> alvin;

  // External wallets
  @Array(128)
  external Array<Char> eth;

  @Array(128)
  external Array<Char> sol;

  @Array(128)
  external Array<Char> trx;

  @Array(128)
  external Array<Char> bsc;

  // Socials
  @Array(128)
  external Array<Char> telegram;

  @Array(128)
  external Array<Char> twitter;

  @Array(128)
  external Array<Char> github;

  @Array(128)
  external Array<Char> facebook;

  @Array(128)
  external Array<Char> instagram;

  @Array(128)
  external Array<Char> linkedin;

  @Array(128)
  external Array<Char> google;

  // Profile info (NOTE: display_name removed in v0.6.24 - only registered name is used)
  @Array(512)
  external Array<Char> bio;

  @Array(128)
  external Array<Char> location;

  @Array(256)
  external Array<Char> website;

  @Array(20484)
  external Array<Char> avatar_base64;
}

// =============================================================================
// CHANNEL DATA STRUCTURES
// =============================================================================

/// Channel information
/// Matches dna_channel_info_t from dna_engine.h
final class dna_channel_info_t extends Struct {
  @Array(37)
  external Array<Char> channel_uuid;

  @Array(101)
  external Array<Char> name;

  // Padding for pointer alignment (37+101=138, next 8-byte boundary=144)
  @Array(6)
  external Array<Uint8> _padding1;

  external Pointer<Utf8> description;

  @Array(129)
  external Array<Char> creator_fingerprint;

  // Padding for uint64_t alignment (129 bytes, next 8-byte boundary needs 7)
  @Array(7)
  external Array<Uint8> _padding2;

  @Uint64()
  external int created_at;

  @Bool()
  external bool is_public;

  @Bool()
  external bool deleted;

  // Padding for uint64_t alignment (2 bools = 2 bytes, need 6 more)
  @Array(6)
  external Array<Uint8> _padding3;

  @Uint64()
  external int deleted_at;

  @Bool()
  external bool verified;
}

/// Channel post information
/// Matches dna_channel_post_info_t from dna_engine.h
final class dna_channel_post_info_t extends Struct {
  @Array(37)
  external Array<Char> post_uuid;

  @Array(37)
  external Array<Char> channel_uuid;

  @Array(129)
  external Array<Char> author_fingerprint;

  // Padding for pointer alignment (37+37+129=203, next 8-byte boundary=208)
  @Array(5)
  external Array<Uint8> _padding1;

  external Pointer<Utf8> body;

  @Uint64()
  external int created_at;

  @Bool()
  external bool verified;
}

/// Channel subscription information
/// Matches dna_channel_subscription_info_t from dna_engine.h
final class dna_channel_subscription_info_t extends Struct {
  @Array(37)
  external Array<Char> channel_uuid;

  // Padding for uint64_t alignment (37 bytes, next 8-byte boundary=40)
  @Array(3)
  external Array<Uint8> _padding1;

  @Uint64()
  external int subscribed_at;

  @Uint64()
  external int last_synced;
